@startuml

entity "User" as user {
  id : number <<generated <<PK>>
  --
  dp_user_id: varchar(255)
  dp_dept_id: csb
  name: varchar(255)
  post: varchar(255)
  email: varchar(255)
  status: Active | Disable
  last_login_date: datetime
  created_by: varchar(255)
  modified_by: varchar(255)
  created_date: datetime
  modified_date: datetime
}

entity "Role" as role {
  id : number <<generated, PK>>
  --
  name: varchar(255)
  description: varchar(255)
  created_by: varchar(255)
  modified_by: varchar(255)
  created_date: datetime
  modified_date: datetime
}

entity "Permission" as permission {
  id : number <<generated, PK>>
  --
  name: varchar(255)
  key: varchar(255)
}

entity "User_Has_Role" as user_has_role {
  user_id: number <<PK, FK>>
  role_id: number <<PK, FK>>
}

entity "Role_Has_Permission" as role_has_permission {
  role_id: number <<PK, FK>>
  permission_id: <<PK, FK>>
}




entity "Exam_Profile" as exam_profile {
  exam_serial_no: varchar <<PK>>
  --
  exam_date: datetime
 - planned_email_issuance_date: date
 - effective_date: date
 - result_letter_date: date
  location: varchar(255)
  status: varchar (50) -> Active
  is_freezed: bit -> 0 | 1
  created_by: varchar(255)
  modified_by: varchar(255)
  created_date: datetime
  modified_date: datetime
}

entity "Email_Template" as email_template {
  id: number <<generated, PK>>
  --
  template_name: varchar(255) <<unique>>
  subject: varchar(1000)
  body: text
  type: varchar (50) -> EXTERNAL | INTERNAL
  created_by: varchar(255)
  modified_by: varchar(255)
  created_date: datetime
  modified_date: datetime
}

entity "GCIS_BATCH_EMAIL" as gcis_batch_email {
    id: number <<generated, PK>>
    --
    email_template_id: number <<FK-Email_Template.id>>
    schedule_datetime: datetime
    xml: text
    status: varchar(255) -> PENDING | COMPLETED | FAILED
    created_by: varchar(255)
    modified_by: varchar(255)
    created_date: datetime
    modified_date: datetime
}

entity "Letter_Template" as letter_template {
  id: number <<generated, PK>>
  --
  name: varchar(255) <<unique>>
  description: varchar(255)
  file_id: number <<FK-File.id>>
  created_by: varchar(255)
  modified_by: varchar(255)
  created_date: datetime
  modified_date: datetime
}

entity "Cert_eProof" as cert_eproof {
  cert_info_id: number <<FK>>
  --
  eproof_id: varchar(20)
  key_name: varchar(8)
  uuid: varchar(100)
  version: number
  token: varchar(100)
  e_wallet_json: text
  e_cert_html: text
  url: varchar(1000)
}

entity "Cert_Pdf" as cert_pdf {
  cert_info_id: number <<PK>> <<FK_Cert_Info.id>>
  --
  file_id: varchar <<FK-File.id>>
}

entity "Cert_Pdf_Renew" as cert_pdf_renew {
  cert_info_renew_id: number <<PK>> <<FK_Cert_Info.id>>
  --
  file_id: varchar <<FK-File.id>>
}

entity "Cert_eproof_renew" as cert_eproof_renew {
  cert_info_renew_id: number <<FK>>
  --
  eproof_id: varchar(20)
  key_name: varchar(8)
  uuid: varchar(100)
  version: number
  token: varchar(100)
  e_wallet_json: text
  e_cert_html: text
  url: varchar(1000)
}

entity "File" as file {
  id: number <<PK, FK>>
  --
  type: varchar(500)
  status: varchar(100)
  path: varchar(4000)
  created_by: varchar(255)
  modified_by: varchar(255)
  created_date: datetime
  modified_date: datetime
}

entity "Cert_Info" as cert_info {
    id: number <<generated, PK>>
    --
    exam_profile_serial: : varchar <<FK>>
    gcis_batch_email_id: number <<FK-GCIS_BATCH_EMAIL.id>>
    exam_date: date
    name: varchar(255)
    cname: varchar(255)
    hkid: varchar(255)
    passport_no: varchar(255)
    email: varchar(255)
    bl_grade: varchar(255)
    ue_grade: varchar(255)
    uc_grade: varchar(255)
    at_grade: varchar(255)
    - is_valid: bit
    - is_passed: bit
    - actual_sign_time: datetime
    - actual_email_send_time: datetime
    remark: varchar(255)
    cert_stage: Imported | Generated | Sign_Issue | Notify | Completed | Voided
    status: Pending | Success | Fail
    on_hold: boolean
    on_hold_remark: text
    cert_pdf_id: number <<FK>>
    created_by: varchar(255)
    modified_by: varchar(255)
    created_date: datetime
    modified_date: datetime
}

entity "Cert_Info_Renew" as cert_info_renew {
    cert_info_id: number <<generated, PK>>
    --
    type: Appeal | Info_Update | Reissue_Historical_Cert

    old_name: varchar(255)
    old_cname: varchar(255)
    old_hkid: varchar(255)
    old_passport: varchar(255)
    old_email: varchar(255)
    old_bl_grade: varchar(255)
    old_ue_grade: varchar(255)
    old_uc_grade: varchar(255)
    old_at_grade: varchar(255)

    new_name: varchar(255)
    new_cname: varchar(255)
    new_hkid: varchar(255)
    new_passport: varchar(255)
    new_email: varchar(255)
    new_bl_grade: varchar(255)
    new_ue_grade: varchar(255)
    new_uc_grade: varchar(255)
    new_at_grade: varchar(255)

    remark: text

    cert_stage: Renewed | Generated | Sign_Issue | Notify | Completed

    status: Pending | Success | Fail
    done: boolean
    created_by: varchar(255)
    modified_by: varchar(255)
    created_date: datetime
    modified_date: datetime
}

entity "Cert_Action" as cert_action{
    id: number <<generated, PK>>
    --
    type: varchar(50) -> Revoke
    status: varchar(50) --> Pending | Success | Rejected
    approver: number <<FK-User.id>>
    remark: varchar(max)
    can_email_content: text
    can_email_address: varchar(255)
    created_by: varchar(255)
    modified_by: varchar(255)
    created_date: datetime
    modified_date: datetime
}

entity "Action_Target" as action_target{
    id: number <<generated, PK>>
    --
    action_id: number <<FK-Cert_Action.id>>
    target_cert_info_id: number <<FK-Cert_Info.id>>
}

entity "Combined_Historical_Result_Before_2024" as combined_historical_result_before_2024 {
    id: number <<generated, PK>>
    --
    exam_date: date
    name: varchar(255)
    cname: varchar(255)
    hkid: varchar(255)
    passport: varchar(255)
    email: varchar(255)
    bl_grade: varchar(255)
    - bl_date: date
    - bl_void: bit 0 = false, 1 = true
    ue_grade: varchar(255)
    - ue_date: date
    - ue_void: bit 0 = false, 1 = true
    uc_grade: varchar(255)
    - uc_grade: date
    - uc_void: bit 0 = false, 1 = true
    at_grade: varchar(255)
    - at_date: date
    - at_void: bit 0 = false, 1 = true
    remark: varchar(1000)
    valid: bit 0 = False, 1 = true
    created_by: varchar(255)
    modified_by: varchar(255)
    created_date: datetime
    modified_date: datetime
}

entity "Email_Message" as email_message {
  id: number <<generated, PK>>
  --
  to: varchar(255)
  cc: varchar(255)
  + type: varchar(255)
  subject: varchar(1000)
  body: text
  created_by: varchar(255)
  modified_by: varchar(255)
  created_date: datetime
  modified_date: datetime
}
entity "Email_Event" as email_event {
  id: number <<generated, PK>>
  --
  email_message_id: number <<FK>>
  status: Success | Fail | Pending
  schedule_datetime: datetime
  created_by: varchar(255)
  modified_by: varchar(255)
  created_date: datetime
  modified_date: datetime
}

entity "Audit_Log" as audit_log {
  id: number <<generated, PK>>
  --
  created_by: varchar(255)
  ip_address: varchar(255)
  computer_information: varchar(255)
  log_details: varchar(1000)
  log_action: varchar(255)
  request_body: varchar(Max)
}

entity "System_parameter" as system_parameter {
  id: number <<generated, PK>>
  --
  name: varchar(255)
  value: varchar(255)
  description: varchar(255)
  created_by: varchar(255)
  modified_by: varchar(255)
  created_date: datetime
  modified_date: datetime
}

entity "User_Session" as user_session {
    id: number <<generated, PK>>
    --
    user_id <<FK-User.id>>
    jwt: varchar(max)
    client_ip_address: varchar(200)
    last_active_time: datetime
    create_time: datetime
}


user ||--o{ user_has_role
exam_profile |o--o{ cert_info

user_has_role }o--|| role
role ||--o{ role_has_permission
role_has_permission }o--|| permission
cert_info ||--o{ cert_info_renew
cert_info ||--o| cert_eproof
email_message ||--|| email_event

cert_action }o--|| cert_info
cert_action }o--|| user

action_target }o--|| cert_info
action_target }|--|| cert_action

user_session |o--|| user

cert_info ||--|{ email_message


cert_info ||--o{ cert_pdf
file ||--|{ cert_pdf

file ||--|{ cert_renew_pdf
cert_info_renew ||--o{ cert_pdf_renew
cert_info_renew ||--o| cert_eproof_renew

gcis_batch_email ||--|| email_template
gcis_batch_email |o--|{ cert_info

letter_template ||--|| file


@enduml